--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "extract-react-intl-messages": "^3.0.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "npm i && react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
