--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node-fetch": "^2.5.5",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
+    "@web3-react/core": "^6.0.7",
     "node-fetch": "^2.6.0",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
@@ -28,6 +29,7 @@
     "graphql": "^14.5.8",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
+    "query-string": "^6.11.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-modal": "^3.11.2",
